Fix horizontal scrolling options and spread things out a bit

--- a/src/App/Inventory/Inventory.css
+++ b/src/App/Inventory/Inventory.css
@@ -23,7 +23,9 @@
     max-height: 100%;
     height: 100%;
     width: 90%;
+    border-left: 3vw solid white;
     border-right: 0.25vw solid black;
+    box-sizing: border-box;
   }
   
   .inventory-list {
