--- a/src/App/Options/Options.css
+++ b/src/App/Options/Options.css
@@ -10,13 +10,12 @@
   .options {
     grid-area: options;
     align-self: center;
-    padding-left: 1vw;
+    padding-left: 2vw;
     height: 100%;
     max-height: 19vh;
     overflow-x: scroll;
     width: 100%;
     flex-flow: column wrap;
-    max-width: 37.5rem;
     margin-left: auto;
     margin-right: auto;
   }
